[gd_scene load_steps=4 format=3 uid="uid://lc7veyjkcppu"]

[ext_resource type="Script" uid="uid://dhji2a5sa647g" path="res://scenes/systems/transition_zone_two_way.gd" id="1_erg4s"]
[ext_resource type="PackedScene" uid="uid://b5yb2ywhnwuh3" path="res://scenes/systems/transition_zone_one_way.tscn" id="2_47irq"]
[ext_resource type="Texture2D" uid="uid://suese6ejcxwd" path="res://assets/Ui/Arrow.png" id="3_wpkbr"]

[node name="TransitionZoneTwoWay" type="Node2D"]
script = ExtResource("1_erg4s")

[node name="TransitionInDirection" parent="." instance=ExtResource("2_47irq")]
position = Vector2(11, 0)

[node name="TransitionAgainstDirection" parent="." instance=ExtResource("2_47irq")]
position = Vector2(-11, 0)
rotation = 3.14159

[node name="Marker2D" type="Marker2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Marker2D"]
rotation = -1.5708
texture = ExtResource("3_wpkbr")
